# chat2html

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/chat2html/: cli.py  format_detect.py  i18n.py  ir.py  render.py  safety.py  template.py
src/chat2html/parsers/: __init__.py  _common.py  claude_ai.py  claude_code.py  codex.py  markdown.py
tests/: conftest.py  test_detect_format.py  test_parsers.py  test_safety.py
tests/fixtures/: claude_ai_sample.json  claude_code_sample.jsonl  codex_sample.jsonl  markdown_sample.md
