[project]
name = "chat2html"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "aki.ariga.001@layerx.co.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.0",
    "markdown>=3.5",
]
license = "MIT"

[project.scripts]
chat2html = "chat2html.cli:main"

[project.urls]
homepage = "https://github.com/chezou/chat2html"
repository = "https://github.com/chezou/chat2html"
issues = "https://github.com/chezou/chat2html/issues"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
