[project]
name = "chat2html"
dynamic = ["version"]
description = "Share-conscious HTML exporter for AI coding-assistant conversations (Claude and Codex)."
readme = "README.md"
authors = [
    { name = "Aki Ariga", email = "github@chezo.uno" }
]
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.0",
    "markdown>=3.5",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["claude", "claude-code", "codex", "chatgpt", "html", "export", "conversation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.scripts]
chat2html = "chat2html.cli:main"

[project.urls]
homepage = "https://github.com/chezou/chat2html"
repository = "https://github.com/chezou/chat2html"
issues = "https://github.com/chezou/chat2html/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/chat2html"]

[tool.hatch.build.targets.sdist]
include = ["src/chat2html", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
